# wr-ai-eng-case-study

./: .env.example  .gitignore  DESIGN.md  README.md  pyproject.toml
.github/workflows/: deploy-dashboard.yml  deploy-dataload.yml  deploy-processing.yml
apps/dashboard/: .dockerignore  .gitignore  Dockerfile  README.md  package-lock.json  package.json  streamlit_app.py
apps/ingest_worker/: Dockerfile  README.md  main.py
data/fixtures/: README.md
data/local/: .gitignore
data/snapshots/: .gitignore
dataload/: .funcignore  __init__.py  function_app.py  local.settings.example.json  requirements.txt
dataload/github_dataload/: __init__.py  function.json
dataload/hacker_news_dataload/: __init__.py  function.json
dataload/manual_github_dataload/: __init__.py  function.json
dataload/reddit_dataload/: __init__.py  function.json
dataload/shared/: __init__.py  base.py  storage.py
dataload/sources/: __init__.py  github.py  hacker_news.py  reddit.py
docs/: architecture.md  azure_deployment.md  cost_latency.md  demo_script.md  evaluation.md  source_selection.md
infra/azure/: README.md  deploy-dataload.ps1  deploy-processing.ps1  setup-dataload.ps1  setup-github-oidc.ps1  setup-processing.ps1
notebooks/: postgres_data_explorer.ipynb  processing_threshold_tuning.ipynb
processing/: __init__.py  local.settings.example.json  requirements.txt
processing/prepare_processing/: __init__.py  function.json
processing/processing_status/: __init__.py  function.json
processing/shared/: __init__.py  (+7 more)
scripts/: reprocess_all_processing.py
tests/: README.md
(+25 files in other folders)
