[project]
name = "whalerock-brain"
version = "0.1.0"
description = "Azure-first monorepo for the Whale Rock AI Engineer case study."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dataload = ["azure-functions>=1.20.0", "azure-storage-blob>=12.20.0", "psycopg[binary]>=3.2.0", "requests>=2.32"]
processing = ["azure-functions>=1.20.0", "openai>=1.80.0", "psycopg[binary]>=3.2.0", "pgvector>=0.3.6"]
dev = ["pytest>=8.0", "ruff>=0.4"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dataload", "processing"]

[tool.ruff]
line-length = 100
src = ["dataload", "processing", "tests"]
